Fix spacing issue with about page headers
Incrase white space since headers were collapsed

--- a/source/stylesheets/_text_extractions.sass
+++ b/source/stylesheets/_text_extractions.sass
@@ -53,3 +53,6 @@ a.tag-list-link
 
 h3.about-header:first-of-type
   margin-top: -0.2em
+
+h3.about-header
+  margin-top: em(20px)
